--- a/OpticalValleyUnite/Classes/UI/ReportForm/View/YQWorkHighlightsDetailCell.xib
+++ b/OpticalValleyUnite/Classes/UI/ReportForm/View/YQWorkHighlightsDetailCell.xib
@@ -34,7 +34,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kdT-Zf-F0i">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_light" translatesAutoresizingMaskIntoConstraints="NO" id="kdT-Zf-F0i">
                                 <rect key="frame" x="20" y="5" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="JcH-mm-0g2"/>
@@ -152,4 +152,7 @@
             <point key="canvasLocation" x="39" y="61"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="img_light" width="18" height="18"/>
+    </resources>
 </document>
