--- a/OpticalValleyUnite/Classes/UI/ReportForm/ViewController/YQReportForm.storyboard
+++ b/OpticalValleyUnite/Classes/UI/ReportForm/ViewController/YQReportForm.storyboard
@@ -30,15 +30,15 @@
                                         <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vh4-k2-25v">
-                                        <rect key="frame" x="330" y="20" width="40" height="21"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle4" translatesAutoresizingMaskIntoConstraints="NO" id="vh4-k2-25v">
+                                        <rect key="frame" x="335" y="20" width="20" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="1dq-IJ-JDq"/>
-                                            <constraint firstAttribute="width" constant="40" id="XwL-gB-I83"/>
+                                            <constraint firstAttribute="width" constant="20" id="XwL-gB-I83"/>
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tz6-bM-Kba">
-                                        <rect key="frame" x="330" y="0.0" width="45" height="60"/>
+                                        <rect key="frame" x="335" y="0.0" width="40" height="60"/>
                                         <connections>
                                             <action selector="timeLabelClick:" destination="PIx-t8-10M" eventType="touchUpInside" id="KBy-j7-Nc2"/>
                                         </connections>
@@ -54,7 +54,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jbC-pZ-rNr">
-                                        <rect key="frame" x="181.5" y="15.5" width="148.5" height="29"/>
+                                        <rect key="frame" x="181.5" y="15.5" width="153.5" height="29"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <state key="normal" title="选择结束时间">
                                             <color key="titleColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
@@ -80,7 +80,7 @@
                                     <constraint firstAttribute="trailing" secondItem="Tz6-bM-Kba" secondAttribute="trailing" id="mOf-cK-ldm"/>
                                     <constraint firstItem="5J4-pj-26h" firstAttribute="centerY" secondItem="QU1-cl-baG" secondAttribute="centerY" id="mq2-wr-jFD"/>
                                     <constraint firstItem="jbC-pZ-rNr" firstAttribute="leading" secondItem="80G-o6-Ets" secondAttribute="trailing" constant="5" id="urs-Im-zue"/>
-                                    <constraint firstAttribute="trailing" secondItem="vh4-k2-25v" secondAttribute="trailing" constant="5" id="vrj-ua-nfQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="vh4-k2-25v" secondAttribute="trailing" constant="20" id="vrj-ua-nfQ"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="81" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="H7U-Nm-joF">
@@ -159,4 +159,7 @@
             <point key="canvasLocation" x="-356" y="-176"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Rectangle4" width="22" height="21"/>
+    </resources>
 </document>
