--- a/OpticalValleyUnite/Classes/UI/ReportForm/ViewController/YQReportFormFirstVC.xib
+++ b/OpticalValleyUnite/Classes/UI/ReportForm/ViewController/YQReportFormFirstVC.xib
@@ -24,7 +24,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="l0W-fl-Cqn"/>
                     </constraints>
-                    <state key="normal" title="日报">
+                    <state key="normal" backgroundImage="ribao">
                         <color key="titleColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <userDefinedRuntimeAttributes>
@@ -38,7 +38,7 @@
                 </button>
                 <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ij8-Ur-dic">
                     <rect key="frame" x="135" y="120" width="105" height="100"/>
-                    <state key="normal" title="周报">
+                    <state key="normal" backgroundImage="zhoubao">
                         <color key="titleColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <userDefinedRuntimeAttributes>
@@ -52,7 +52,7 @@
                 </button>
                 <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Umw-X8-xpe">
                     <rect key="frame" x="255" y="120" width="105" height="100"/>
-                    <state key="normal" title="月报">
+                    <state key="normal" backgroundImage="yuebao">
                         <color key="titleColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <userDefinedRuntimeAttributes>
@@ -64,21 +64,50 @@
                         <action selector="reportFormSelectClick:" destination="-1" eventType="touchUpInside" id="jVc-j4-Bdj"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日报" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iHf-7G-ITw">
+                    <rect key="frame" x="50" y="220" width="35" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="周报" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PY2-LT-9wh">
+                    <rect key="frame" x="170" y="220" width="35" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="月报" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IO0-yf-ZIe">
+                    <rect key="frame" x="290" y="220" width="35" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="Ij8-Ur-dic" firstAttribute="leading" secondItem="g2Y-Co-A2N" secondAttribute="trailing" constant="15" id="0Or-Nl-Wqu"/>
                 <constraint firstItem="Ij8-Ur-dic" firstAttribute="height" secondItem="g2Y-Co-A2N" secondAttribute="height" id="279-la-Lz0"/>
                 <constraint firstItem="Umw-X8-xpe" firstAttribute="leading" secondItem="Ij8-Ur-dic" secondAttribute="trailing" constant="15" id="6iS-M0-dxp"/>
+                <constraint firstItem="iHf-7G-ITw" firstAttribute="top" secondItem="g2Y-Co-A2N" secondAttribute="bottom" id="GiN-4O-Y5c"/>
                 <constraint firstAttribute="trailing" secondItem="Umw-X8-xpe" secondAttribute="trailing" constant="15" id="KaJ-8S-Abh"/>
                 <constraint firstItem="g2Y-Co-A2N" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="120" id="WJe-8u-d5b"/>
                 <constraint firstItem="Umw-X8-xpe" firstAttribute="top" secondItem="Ij8-Ur-dic" secondAttribute="top" id="awJ-7m-NxI"/>
+                <constraint firstItem="PY2-LT-9wh" firstAttribute="centerX" secondItem="Ij8-Ur-dic" secondAttribute="centerX" id="b72-lR-fPm"/>
+                <constraint firstItem="iHf-7G-ITw" firstAttribute="centerX" secondItem="g2Y-Co-A2N" secondAttribute="centerX" id="bXz-uN-5he"/>
+                <constraint firstItem="IO0-yf-ZIe" firstAttribute="centerX" secondItem="Umw-X8-xpe" secondAttribute="centerX" id="ibk-AA-M8l"/>
                 <constraint firstItem="Umw-X8-xpe" firstAttribute="height" secondItem="Ij8-Ur-dic" secondAttribute="height" id="nAa-Ur-t3L"/>
                 <constraint firstItem="Ij8-Ur-dic" firstAttribute="width" secondItem="g2Y-Co-A2N" secondAttribute="width" id="pTK-2n-gDm"/>
+                <constraint firstItem="IO0-yf-ZIe" firstAttribute="top" secondItem="Umw-X8-xpe" secondAttribute="bottom" id="prT-VQ-t1x"/>
                 <constraint firstItem="Umw-X8-xpe" firstAttribute="width" secondItem="g2Y-Co-A2N" secondAttribute="width" id="qfd-nP-EiT"/>
+                <constraint firstItem="PY2-LT-9wh" firstAttribute="top" secondItem="Ij8-Ur-dic" secondAttribute="bottom" id="tGp-Z7-fjh"/>
                 <constraint firstItem="Ij8-Ur-dic" firstAttribute="top" secondItem="g2Y-Co-A2N" secondAttribute="top" id="xgS-P2-cK2"/>
                 <constraint firstItem="g2Y-Co-A2N" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="yoC-KO-qxK"/>
             </constraints>
         </view>
     </objects>
+    <resources>
+        <image name="ribao" width="33" height="33"/>
+        <image name="yuebao" width="33" height="33"/>
+        <image name="zhoubao" width="33" height="33"/>
+    </resources>
 </document>
