--- a/OpticalValleyUnite/Classes/UI/OffLineWorkOrder/ViewController/YQOffLineFirst.storyboard
+++ b/OpticalValleyUnite/Classes/UI/OffLineWorkOrder/ViewController/YQOffLineFirst.storyboard
@@ -261,6 +261,7 @@
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y9I-C7-0sC">
                                 <rect key="frame" x="305" y="607" width="60" height="50"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="dKP-fU-kQ3"/>
                                     <constraint firstAttribute="width" constant="60" id="s8B-mi-hC8"/>
@@ -286,6 +287,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ijh-kc-bLP">
                                 <rect key="frame" x="305" y="547" width="60" height="50"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="Mmn-Z2-7pS"/>
                                     <constraint firstAttribute="height" constant="50" id="POL-xs-tsA"/>
